[package]
name = "colly"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.9"
failure = "0.1"
failure_derive = "0.1"
human-panic = "1.0"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.3"
